# recurrent_nn_pwa

./: .gitignore  README.md  pyproject.toml  requirements.txt
rnn2pwa/: __init__.py  types.py
rnn2pwa/conversion/: activation_patterns.py  convert.py  feasibility.py  local_dynamics.py  region_constraints.py
rnn2pwa/io/: pgf_utils.py
rnn2pwa/models/: __init__.py  rnn_relu.py
rnn2pwa/regions/: __init__.py  adjacency.py  local_dynamics.py  lp_feasibility.py
rnn2pwa/relu_rnn/: eval.py  model_io.py
rnn2pwa/simulate/: __init__.py  rollout.py
rnn2pwa/utils/: __init__.py  discovery.py  signals.py  viz.py
rnn2pwa/visualize/: __init__.py  analysis_plots.py  graph.py  partition2d.py  style.py  trajectories.py
scripts/: discovery_regions.py  simulate_compare.py
