[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnn2pwa"
version = "0.1.0"
description = "ReLU-RNN to PWA: region discovery, local dynamics, simulation, and structural adjacency."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Marco Ledda"}]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "matplotlib>=3.6",
]

[project.optional-dependencies]
graph = ["networkx>=3.1"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rnn2pwa*"]

[tool.setuptools]
zip-safe = false
